Manual self upgrade to see if Prow works
Signed-off-by: Erik Godding Boye <egboye@gmail.com>

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -4,7 +4,8 @@
 {
   $schema: 'https://docs.renovatebot.com/renovate-schema.json',
   enabled: true,
-  gitAuthor: 'cert-manager-bot <cert-manager-bot@users.noreply.github.com>',
+  gitAuthor: 'Renovate Bot <renovate-bot@users.noreply.github.com>',
+  recreateWhen: 'always', // TODO: Remove; temporary fix to force Renovate to ignore "foreign" commits
   enabledManagers: [
     'gomod',
   ],
@@ -29,6 +30,7 @@
     ],
     executionMode: 'branch',
   },
+  // packageRules uses globs for matchPackageNames. Some packages have a separate major version i.e. /v on them which is when we would need package**/**.
   packageRules: [
     {
       groupName: 'Misc Go deps',
@@ -45,9 +47,9 @@
         'gomod',
       ],
       matchPackageNames: [
-        'github.com/onsi/ginkgo**/**',
-        'github.com/onsi/gomega**/**',
-        'github.com/stretchr/testify**/**',
+        'github.com/onsi/ginkgo/**',
+        'github.com/onsi/gomega',
+        'github.com/stretchr/testify',
       ],
     },
     {
@@ -56,12 +58,12 @@
         'gomod',
       ],
       matchPackageNames: [
-        'github.com/akamai**/**',
-        'github.com/aws**/**',
-        'github.com/Azure**/**',
-        'github.com/AzureAD**/**',
-        'github.com/cloudflare**/**',
-        'github.com/digitalocean**/**',
+        'github.com/akamai/**',
+        'github.com/aws/**',
+        'github.com/Azure/**',
+        'github.com/AzureAD/**',
+        'github.com/cloudflare/**',
+        'github.com/digitalocean/**',
         'google.golang.org/api',
       ],
     },
@@ -71,8 +73,8 @@
         'gomod',
       ],
       matchPackageNames: [
-        'sigs.k8s.io**/**',
-        'k8s.io**/**',
+        'sigs.k8s.io/**',
+        'k8s.io/**',
       ],
     },
     {
@@ -81,7 +83,7 @@
         'gomod',
       ],
       matchPackageNames: [
-        'k8s.io**/**',
+        'k8s.io/**',
       ],
       matchUpdateTypes: [
         'patch',
@@ -96,7 +98,7 @@
         'gomod',
       ],
       matchPackageNames: [
-        'golang.org/x**/*',
+        'golang.org/x/**',
       ],
       addLabels: [
         'skip-review', // Adding label to allow PRs to automerge
